fix: removed horizontal scroll bar

--- a/src/components/Chat/Chat.module.scss
+++ b/src/components/Chat/Chat.module.scss
@@ -54,3 +54,7 @@
     color: gray;
     text-align: right;
 }
+
+.chatTitle {
+  text-align: center;
+}
