--- a/src/pages/Game/Game.module.scss
+++ b/src/pages/Game/Game.module.scss
@@ -33,7 +33,6 @@
 .score {
   display: flex;
   flex-wrap: wrap;
-  padding-left: 38px;
   font-size: 24px;
 }
 
